# splunk-jobsearch

./: .gitignore  README.md  SECURITY.MD  dev-build.yml  inspect  inspect-precert  inspect.yml  jobsearch-0.0.5.spl  jobsearch.tgz  make-manifest  make-package  package.sh  prod-build.yml  pyproject.toml  run_tests.sh
jobsearch/: README  README.txt  app.manifest
jobsearch/default/: app.conf  inputs.conf  props.conf
jobsearch/default/data/ui/views/: splunk_jobs.xml
splunkjobs/: README  app.manifest
splunkjobs/default/: app.conf  inputs.conf
splunkjobs/default/data/ui/nav/: default.xml
splunkjobs/default/data/ui/views/: splunk_jobs.xml
